Remove references to Random from the about

--- a/about.html
+++ b/about.html
@@ -36,12 +36,11 @@
 
 				<br><br>
 
-				We use a simple flashcard based approach to learning to read, write and understand 汉字. There are 3 components of the app:
+				We use a simple flashcard based approach to learning to read, write and understand the given writing system. There are 2 components of the app:
 			</p>
 			<ol>
-				<li>Introduction to 汉字 to help beginners with learning the fundamentals</li>
-				<li>汉字 discover that gives you some new and exciting 汉字 to learn</li>
-				<li>汉字 practice - Helps you learn to read and write the given character</li>
+				<li>Introduction to the writing system to help beginners with learning the fundamentals</li>
+				<li>Practice - Helps you learn to read and write the given character</li>
 			</ol>
 			<p>
 				The app is not a dictionary, the user is supposed to use a separate dictionary(like <a href="https://pleco.com">pleco</a> for Chinese)
@@ -75,12 +74,6 @@
 				Non-CJK languages also have guides for cursive
 			</p>
 
-			<h2>Discover</h2>
-			<p>
-				While this is not a full fledged language learning platform and definitely not a dictionary, discover mode helps you find interesting characters or words which you can later
-				add to your flashcards
-			</p>
-
 			<h2>The story of the app's development</h2>
 			<p>
 				The founder of the project is <a href="https://madman10k.online">Stanislav Vasilev(Madman10K)</a>. At the time in 2023 he was learning Chinese and German, his mother tongue is Bulgarian,
@@ -106,7 +99,7 @@
 				site is similar to the following 3 words:
 			</p>
 			<ol>
-				<li>诱因 - meaning cause esp. of an illness, it's related to the site because you'll become sick of "I know how to write so much Chinese characters syndrome"</li>
+				<li>诱因 - meaning cause esp. of an illness, it's related to the site because you'll become sick of "I know how to write so much Chinese characters" syndrome</li>
 				<li>油印 - meaning a mimeograph, a device for copying text and images to another list of paper, related because you will be copying handwriting here a lot</li>
 				<li>有瘾 - meaning to be addicted to something, relevant because you'll be addicted to writing characters here</li>
 			</ol>
