--- a/about.html
+++ b/about.html
@@ -113,8 +113,7 @@
 		<footer class="centered">
 			<p>
 				A project by <a href="https://madladsquad.com/">MadLad Squad</a>, based on the <a href="https://hanziwriter.org/">hanziwriter</a>
-				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries, each project gets 20% of all donations, purchases
-				and AD earnings ❤️
+				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries ❤️
 			</p>
 			<select name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
 				<option value="0">🇬🇧     EN</option>
