--- a/deck.html
+++ b/deck.html
@@ -31,58 +31,13 @@
 			<ul>
 		</header>
 		<main id="deck">
-			<div class="card centered">
-				<h3>Gài 3/5</h3>
-				<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-				<div id="card-character-target-div"></div>
-
-				<p>Definition:</p>
-				<ol>
-					<li>Manner, mettle</li>
-					<li>General idea</li>
-					<li>Scenery, scene</li>
-					<li>Without any exception</li>
-				</ol>
-
-				<button class="card-button-edit" type="submit">Edit</button>
-			</div>
-			<div class="card centered">
-				<h3>Gài 3/5</h3>
-				<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-				<div id="card-character-target-div-2"></div>
-
-				<p>Definition:</p>
-				<ol>
-					<li>Manner, mettle</li>
-					<li>General idea</li>
-					<li>Scenery, scene</li>
-					<li>Without any exception</li>
-				</ol>
-
-				<button class="card-button-edit" type="submit">Edit</button>
-			</div>
-			<div class="card centered">
-				<h3>Gài 3/5</h3>
-				<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-				<div id="card-character-target-div-3"></div>
-
-				<p>Definition:</p>
-				<ol>
-					<li>Manner, mettle</li>
-					<li>General idea</li>
-					<li>Scenery, scene</li>
-					<li>Without any exception</li>
-				</ol>
-
-				<button class="card-button-edit" type="submit">Edit</button>
-			</div>
-
+			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
+			<!-- Data will be inserted dynamically by the Javascript here from deck.js file -->
 		</main>
 		<footer class="centered">
 			<p>
 				A project by <a href="https://madladsquad.com/">MadLad Squad</a>, based on the <a href="https://hanziwriter.org/">hanziwriter</a>
-				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries, each project gets 20% of all donations, purchases
-				and AD earnings ❤️
+				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries ❤️
 			</p>
 			<select name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
 				<option value="0">🇬🇧   EN</option>
