The main page layout is now way better on mobile + fixed scrollbar issue on Chromium browsers

--- a/404.html
+++ b/404.html
@@ -37,14 +37,13 @@
 
 		<footer class="centered">
 			<p>
-				A project by <a href="https://madladsquad.com/">MadLad Squad</a>, based on the <a href="https://hanziwriter.org/">hanziwriter</a>
-				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries ❤️
+				A <a href="https://madladsquad.com/">MadLad Squad</a> project!
 			</p>
-			<select name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
+			<select aria-label="Language select box" name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
 				<option value="0">🇬🇧     EN</option>
 				<option value="1">🇧🇬     BG</option>
-				<option value="2">🇨🇳     CN SC</option>
-				<option value="3">🇹🇼     CN TC</option>
+				<option value="2">🇨🇳     CN</option>
+				<option value="3">🇹🇼     CN-T</option>
 				<option value="4">🇩🇪     DE</option>
 				<option value="5">🇲🇰     MK</option>
 				<option value="6">🇷🇺     RU</option>
