--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Learn how to write and read Chinese characters and other writing systems in a fun and easy way">
 		<meta name="keywords" content="Youyin, MadLad Squad, writing systems, Chinese Characters, Japanese Kana, Latin, Cyrillic, Georgian, Armenian, Greek, Arabic, Hindi, 
@@ -15,8 +15,8 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="main.css">
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="main.css" type="text/css">
 
 		<title class="site-title">Youyin </title>
 	</head>
@@ -48,20 +48,17 @@
 				<line x1="50%" y1="0" x2="50%" y2="100%" stroke="#DDD" />
 				<line x1="0" y1="50%" x2="100%" y2="50%" stroke="#DDD" />
 			</svg>
-			
-			<!--<div id="character-target-div" class="centered character-div"></div>-->
 		</main>
 
 		<footer class="centered">
 			<p>
-				A project by <a href="https://madladsquad.com/">MadLad Squad</a>, based on the <a href="https://hanziwriter.org/">hanziwriter</a>
-				and <a href="https://www.skishore.me/makemeahanzi/">makemeahanzi</a> libraries ❤️
+				A <a href="https://madladsquad.com/">MadLad Squad</a> project!
 			</p>
-			<select name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
+			<select aria-label="Language select box" name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
 				<option value="0">🇬🇧   EN</option>
 				<option value="1">🇧🇬   BG</option>
-				<option value="2">🇨🇳   CN SC</option>
-				<option value="3">🇹🇼   CN TC</option>
+				<option value="2">🇨🇳   CN</option>
+				<option value="3">🇹🇼   CN-T</option>
 				<option value="4">🇩🇪   DE</option>
 				<option value="5">🇲🇰   MK</option>
 				<option value="6">🇷🇺   RU</option>
