Improved some stuff and added comments to the code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<line x1="0" y1="50%" x2="100%" y2="50%" stroke="#DDD" />
 			</svg>
 		</main>
-
+		<hr id="main-page-hr">
 		<footer class="centered">
 			<p>
 				A <a href="https://madladsquad.com/">MadLad Squad</a> project!
