Update the pages a bit

--- a/deck.html
+++ b/deck.html
@@ -38,6 +38,9 @@
 				<h1 id="new-card-header">+</h1>
 				<p>Add a new card to the deck</p>
 				<button id="new-card-button" class="card-button-edit" onclick="location.href='./deck-edit-card.html?new'">New card</button>
+				<br>
+				<button id="import-deck-button" class="card-button-edit">Import</button>
+				<button id="export-deck-button" class="card-button-edit">Export</button>
 			</div>
 			<!-- Data will be inserted dynamically by the Javascript here from deck.js file -->
 		</main>
