--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div">
+			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
 				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
 				<line x1="100%" y1="0" x2="0" y2="100%" stroke="#DDD" />
 				<line x1="50%" y1="0" x2="50%" y2="100%" stroke="#DDD" />
