Update the about page a bit

--- a/about.html
+++ b/about.html
@@ -110,6 +110,23 @@
 				generally means, cause, origin, to follow, to carry on, to conform to, to accord with, because of, as a result of, because.
 				<br>
 			</p>
+
+			<h2>Credits</h2>
+			<p>
+				Youyin uses the following open source libraries for most of the testing and text rendering functionality, most of the yearly revenue of the site after maintenance costs gets donated to those 2
+				projects:
+			</p>
+			<ol>
+				<li><a href="https://github.com/skishore/makemeahanzi">Makemeahanzi</a> - Provides the character information used by Hanziwriter</li>
+				<li><a href="https://github.com/chanind/hanzi-writer">Hanziwriter</a> - Provides the character animations and handwriting recognition used during tests</li>
+			</ol>
+			<p>
+				Addtionally, we want to thank the following people for helping with the development of the application:
+			</p>
+			<ol>
+				<li><a href="https://github.com/ProHunter67BG">Hristian Rusev</a> for providing German translations</li>
+				<li><a href="https://github.com/Neyko641">Neyko Naydenov</a> for providing Japanese translations</li>
+			</ol>
 			<hr>
 		</main>
 		<footer class="centered">
