--- a/learning.html
+++ b/learning.html
@@ -34,7 +34,7 @@
 		</header>
 		<main>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<h1 class="centered">The learning section is currently a work in progress and is bound to be incomplete</h1>
+			<h1 class="centered">The learning section is currently a work in progress and is bound to be incomplete 🚧</h1>
 
 			<hr>
 
