Optimize some of the pages and prepare for finalization of the core features

--- a/marketplace.html
+++ b/marketplace.html
@@ -39,7 +39,7 @@
 				<div id="new-deck-upload-card" class="card centered">
 					<h3 id="new-card-header-smaller">+</h3>
 					<p>Want to add your deck to the marketplace? Click below to learn more!</p>
-					<button id="upload-deck-public" class="card-button-edit" onclick="location.href='https://github.com/MadLadSquad/YouyinPublicDeckRepository'">Upload</button>
+					<button id="upload-deck-public" class="card-button-edit" onclick="window.open('https://github.com/MadLadSquad/YouyinPublicDeckRepository')">Upload</button>
 				</div>
 			</section>
 			<h1 class="centered">Community decks</h1>
