--- a/deck.html
+++ b/deck.html
@@ -26,7 +26,7 @@
 		<title class="site-title">Deck | Youyin </title>
 	</head>
 	<body>
-		<header>
+		<header class="header-deck">
 			<ul>
 				<li><a href="./index.html" class="site-title">Youyin </a></li>
 				<li><a href="./learning.html">Learning</a></li>
