--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="main.css" type="text/css">
+		<link rel="stylesheet" href="deck.css" type="text/css">
 
 		<title class="site-title">Youyin </title>
 	</head>
@@ -44,12 +45,14 @@
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
+			<button id="start-button" class="card-button-edit centered character-prop">Start session</button>
+			<!-- This image will get dynamically imported by main-page.js when the button is clicked
 			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
 				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
 				<line x1="100%" y1="0" x2="0" y2="100%" stroke="#DDD" />
 				<line x1="50%" y1="0" x2="50%" y2="100%" stroke="#DDD" />
 				<line x1="0" y1="50%" x2="100%" y2="50%" stroke="#DDD" />
-			</svg>
+			</svg>-->
 		</main>
 		<hr id="main-page-hr">
 		<footer class="centered">
