Added a lot of stuff, profile view in deck, last timestamp, deck reset on play, sidebar change on play. Only remaining non-revenue feature is to implement streaks

--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
 		</header>
 		<main id="main-page">
 			<div id="character-info-widget">
-				<p id="character-info-widget-spelling">Spelling: gài</p>
-				<p id="character-info-widget-errors">Errors: 0</p>
-				<p>Definition:</p>
+				<p id="character-info-widget-spelling">Spelling: To be loaded</p>
+				<p id="character-info-widget-errors">Errors: To be loaded</p>
+				<p>Definitions:</p>
 				<ol id="character-info-widget-info">
-					<li>Manner, mettle</li>
-					<li>General idea</li>
-					<li>Scenery, scene</li>
-					<li>Without any exception</li>
+					<li>To be loaded</li>
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
