--- a/deck.html
+++ b/deck.html
@@ -13,8 +13,6 @@
 			Hangul, Katakana, Hiragana, hanzi, kanji, hanja, hangul, katakana, hiragana">
 		<meta name="author" content="MadLad Squad">
 
-
-
 		<link rel="icon" type="image/png" href="./favicon.png">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,6 +34,14 @@
 		</header>
 		<main id="deck">
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
+			<div id="profile-card" class="card centered">
+				<h3>Profile Statistics</h3>
+				<p id="total-sessions-field">Total Sessions: </p>
+				<p id="streak-field">Streak: </p>
+				<p id="deck-card-num-field">Cards in deck: </p>
+				<p id="last-session-date-field">Last session: </p>
+				<p id="average-knowledge-level-field">Average knowledge level: </p>
+			</div>
 			<div id="new-card" class="card centered">
 				<h1 id="new-card-header">+</h1>
 				<p>Add a new card to the deck</p>
