Record sessin length, grading and more humane errors remain

--- a/deck.html
+++ b/deck.html
@@ -41,6 +41,8 @@
 				<p id="deck-card-num-field">Cards in deck: </p>
 				<p id="last-session-date-field">Last session: </p>
 				<p id="average-knowledge-level-field">Average knowledge level: </p>
+				<p id="average-session-length-field">Average session length: </p>
+				<p id="time-spent-in-sessions-field">Time spent in sessions: </p>
 			</div>
 			<div id="new-card" class="card centered">
 				<h1 id="new-card-header">+</h1>
