--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</ol>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
-			<button id="start-button" class="card-button-edit centered character-prop">Start session</button>
+			<button id="start-button" class="card-button-edit centered character-prop">Click to start session</button>
 			<!-- This image will get dynamically imported by main-page.js when the button is clicked
 			<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
 				<line x1="0" y1="0" x2="100%" y2="100%" stroke="#DDD" />
