Fixed error with recording timing and refactored the information pages

--- a/about.html
+++ b/about.html
@@ -38,65 +38,26 @@
 
 				<br><br>
 
-				We use a simple flashcard based approach to learning to read, write and understand the given writing system. There are 2 components of the app:
+				We use a simple flashcard based approach to learning to read, write and understand the given writing system. These are the components of the app:
 			</p>
 			<ol>
-				<li>Introduction to the writing system to help beginners with learning the fundamentals</li>
+				<li>Learning - A page filled with tips for new language learners</li>
 				<li>Practice - Helps you learn to read and write the given character</li>
+				<li>Deck marketplace - A large list of community and official decks that can be imported on demand</li>
 			</ol>
 			<p>
 				The app is not a dictionary, the user is supposed to use a separate dictionary(like <a href="https://pleco.com">pleco</a> for Chinese)
-
-				<br><br>
-
-				The app also supports limited features for learning to write using other writing systems like Latin, Hiragana, Katakana, Cyrillic, Georgian, Armenian, Arabic and other writing systems
-			</p>
-			<h2>Practice, the main feature</h2>
-			<p>
-				Practice mode is the main feature of the app, it's a flashcard based system for learning characters. When you add a character to your dictionary it will be in the learning list, 
-				then when you start practicing it will first be introduced fully a couple of times, then as you get better at drawing it,
-				it components will be removed until you can recall how to write the character in its entirety
-
-				<br><br>
-
-				This is also useful for people new to languages with a script that's unknown to the learner
-			</p>
-
-			<h2>Introduction to the writing system</h2>
-			<p>
-				The introduction feature starts on first login in the app and is designed to primarily help beginners with learning the writing techniques in their specific script as well as how to read and 
-				tips for remembering characters
-
-				<br><br>
-
-				For CJK languages that would be learning how to write dynamically, learning about radicals and tips for remembering the characters.
-				<br><br>
-				All languages provided also get a brief phonetics guide to help with pronunciation of letters and words
-				<br><br>
-				Non-CJK languages also have guides for cursive
 			</p>
 
 			<h2>The story of the app's development</h2>
 			<p>
-				The founder of the project is <a href="https://madman10k.online">Stanislav Vasilev(Madman10K)</a>. At the time in 2023 he was learning Chinese and German, his mother tongue is Bulgarian,
-				which is written in Cyrillic, while his second language is English, which is written in a modified version of the latin alphabet.
+				In January 2023 <a href="https://madman10k.online/">Stanislav Vasilev(Madman10K)</a> decided to create Youyin because he was already learning Chinese and found remembering to write the characters
+				hard. He found no existing solution that would help with that, so he decided to develop one himself. Initially started as a platform for learning to write Chinese characters, 
+				Youyin is currently expanding into more writing systems like Hiragana, Katakana, Hangul, Cyrillic, Latin, Greek, Georgian, Armenian, Arabic and more.
 
 				<br><br>
 
-				While trying to learn Chinese, a problem kept occurring: because he didn't write using <a href="https://en.wikipedia.org/wiki/Cangjie_input_method">Cangjie</a> or 
-				<a href="https://en.wikipedia.org/wiki/Wubi_method">Wubi</a> and instead used a <a href="https://en.wikipedia.org/wiki/Pinyin">Pinyin based input method</a>, he found it easy
-				to learn how to read characters but not how to write them, or at least that was in the beginning of his Chinese learning journey. When a learner initially starts learning Chinese
-				characters, it may be easy to remember to read them at first, but at some point many similar characters enter the person's memory and without knowing how to write them,
-				the learner has almost no ability to tell components apart and therefore differentiate characters, not to mention reading handwritten characters.
-
-				<br><br>
-
-				For this very reason, Youyin was created. Initially as a platform for learning to write Chinese characters, Youyin now supports many more scripts including Hiragana, Katakana, Hangul,
-				Cyrillic, Latin, Greek, Georgian, Armenian, Arabic and more.
-
-				<br><br>
-
-				The name Youyin comes from a bad joke about the videogame <a href="https://en.wikipedia.org/wiki/Among_Us">Amongus</a> where people all over the internet were going insane when they saw the 
+				The name Youyin comes from a bad joke about the videogame <a href="https://en.wikipedia.org/wiki/Among_Us">Among us</a> where people all over the internet were going insane when they saw the 
 				geometric shape of the crewmates in the game. In Chinese the name uses the 2 symbols "卣囙" pronounced as "yǒuyīn" in pinyin, which kind of look like the crewmates. Additionally the name of the 
 				site is similar to the following 3 words:
 			</p>
