--- a/learning.html
+++ b/learning.html
@@ -40,7 +40,8 @@
 
 			<h1>Tips for learning Chinese characters:</h1>
 			<p>
-				Let's begin with form: All chinese characters have a specific stroke order that needs to be strictly followed, currently we only use the PRC stroke order with the exception of
+				Let's begin with form: All Chinese characters are made to take up a rougly square space, historically they were also written in columns from top to bottom, right to left. 
+				All characters also have a specific stroke order that needs to be strictly followed, currently we only use the PRC stroke order with the exception of
 				Chinese characters created in Japan or Korea. Here is the stroke order for the character 想:
 			</p>
 			<svg xmlns="http://www.w3.org/2000/svg" width="100px" height="100px" id="character-target-div-n" class="centered character-prop">
@@ -65,7 +66,7 @@
 				});
 			</script>
 			<p>
-				Additionally, you might have noticed that strokes are dynamic, that is they start slow and press hard, then transition to fast and light. That's because Chinese characters have traditionally
+				Additionally, you might have noticed that strokes are dynamic, that is, they start slow and press hard, then transition to fast and light. That's because Chinese characters have traditionally
 				been written on paper using a brush, allowing for more dynamic strokes than in other writing systems. Notice the change in speed here:
 			<p>
 			<br>
@@ -97,12 +98,14 @@
 			</p>
 			<br>
 			<p>
-				Now to remembering characters: There are a couple of methods depending on the characters depending on their type. Pictograms are characters like 木, 日, 山 and 月. These characters represent
-				a specific idea graphically. Characters similar to pictograms are the simple ideograms like 上, 下, 凸, 凹 which represent up, down, convex and concave respectivelly. Then there are
-				compound ideographs like 明(sun next to moon = bright), 休(man next to tree = relaxed), 好(woman next to child = good). Finally there are phono-semantic compounds like 湖 and 河,
-				both have the water radical 氵on their left side that determines their meaning, since the characters mean river and lake respectively. Their pronunciation is hé and hú respectively,
-				where the pronunciation is determined by the main part of the character that being 胡(hú) and 可(kě).
+				Now to remembering characters: There are a couple of methods depending on the characters depending on their type. <br> Pictograms are characters like 木, 日, 山 and 月. These characters represent
+				a specific physical object graphically. <br> A category similar to pictograms are the simple ideograms like 上(up), 下(down), 凸(convex), 凹(concave), which represent ideas graphically. <br>
+				Then there are compound ideographs like 明(sun next to moon = bright), 休(man next to tree = relaxed), 好(woman next to child = good).<br>Finally there are phono-semantic compounds like 湖 and 河,
+				both have the water radical 氵on their left side that determines their meaning, since the characters mean river and lake respectively. Their pronunciation is hú and hé respectively,
+				which is determined by the main part of the character, that being 胡(hú) and 可(kě). Phono-semantic compounds basically use 1 or more radicals or characters that provide the meaning, and
+				1 character or radical that provides phonetic information, which the reader can use to guess what the character sounds like.
 			</p>
+			<hr>
 		</main>
 		<footer class="centered">
 			<p>
